fixed hidden visibility

--- a/app/assets/stylesheets/components/_feed.scss
+++ b/app/assets/stylesheets/components/_feed.scss
@@ -1,10 +1,10 @@
 .swipe {
-  overflow: hidden;
+  
   visibility: hidden;
   position: relative;
 }
 .swipe-wrap {
-  overflow: hidden;
+  
   position: relative;
 }
 .swipe-wrap > div {
